--- a/lib/client/public/index.html
+++ b/lib/client/public/index.html
@@ -5,6 +5,11 @@
 </head>
 <body>
 	<h1>Is the ISS near to me?</h1>
-	<p>Testing!</p>
+	<div id="app">
+		<p>{{ message }}</p>
+		<input v-model="message">
+	</div>
+	<script src="https://unpkg.com/vue/dist/vue.js"></script>
+	<script src="js/app.js"></script>
 </body>
 </html>
