--- a/lib/client/public/index.html
+++ b/lib/client/public/index.html
@@ -2,14 +2,19 @@
 <html>
 <head>
 	<title>ISS Project</title>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-	<h1>Is the ISS near to me?</h1>
 	<div id="app">
-		<p>{{ message }}</p>
-		<input v-model="message">
+		<h1 v-cloak>{{headline}}</h1>
+		<input type="text" placeholder="Latitude" v-model="latitude">
+		<input type="text" placeholder="Longitude" v-model="longitude">
+		<button @click="getDistance">Submit</button>
+		<br>
+		<span>{{distance}}</span>
 	</div>
 	<script src="https://unpkg.com/vue/dist/vue.js"></script>
+	<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 	<script src="js/app.js"></script>
 </body>
 </html>
