--- a/lib/client/public/index.html
+++ b/lib/client/public/index.html
@@ -2,16 +2,23 @@
 <html>
 <head>
 	<title>ISS Project</title>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-	<div id="app">
-		<h1 v-cloak>{{headline}}</h1>
-		<input type="text" placeholder="Latitude" v-model="latitude">
-		<input type="text" placeholder="Longitude" v-model="longitude">
-		<button @click="getDistance">Submit</button>
-		<br>
-		<span>{{distance}}</span>
+	<div id="app" class="container">
+	<img :src="isslogo" id="logo">
+		<div id="form">
+			<h1 v-cloak>{{headline}}</h1>
+				<label for="latitude">Latitude:</label>
+				<input type="text" name="latitude" placeholder="Latitude" v-model="latitude">
+				<label for="longitude">Latitude:</label>
+			<input type="text" name="longitude" placeholder="Longitude" v-model="longitude">
+			<button @click="getDistance">Submit</button>
+		</div>
+		<div class="results">
+			<p>{{distance}}</p>
+		</div>
 	</div>
 	<script src="https://unpkg.com/vue/dist/vue.js"></script>
 	<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
