--- a/lib/client/public/index.html
+++ b/lib/client/public/index.html
@@ -2,11 +2,12 @@
 <html>
 <head>
 	<title>ISS Project</title>
+	<meta charset="utf-8">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-	<div id="app" class="container">
+	<div id="app" class="container wrap">
 	<img :src="isslogo" id="logo">
 		<div id="form">
 			<h1 v-cloak>{{headline}}</h1>
@@ -20,6 +21,13 @@
 			<p>{{distance}}</p>
 		</div>
 	</div>
+	<footer class="page-footer">
+		<div class="footer-copyright">
+			<div class="container" id="footer-text">
+        <span>Developed by AlvaroJossue</span>
+      </div>
+    </div>
+  </footer>
 	<script src="https://unpkg.com/vue/dist/vue.js"></script>
 	<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 	<script src="js/app.js"></script>
