--- a/lib/client/public/index.html
+++ b/lib/client/public/index.html
@@ -30,6 +30,7 @@
   </footer>
 	<script src="https://unpkg.com/vue/dist/vue.js"></script>
 	<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+	<script src="js/components/form-component.js"></script>
 	<script src="js/app.js"></script>
 </body>
 </html>
