--- a/lib/client/public/index.html
+++ b/lib/client/public/index.html
@@ -8,18 +8,8 @@
 </head>
 <body>
 	<div id="app" class="container wrap">
-	<img :src="isslogo" id="logo">
-		<div id="form">
-			<h1 v-cloak>{{headline}}</h1>
-				<label for="latitude">Latitude:</label>
-				<input type="text" name="latitude" placeholder="Latitude" v-model="latitude">
-				<label for="longitude">Latitude:</label>
-			<input type="text" name="longitude" placeholder="Longitude" v-model="longitude">
-			<button @click="getDistance">Submit</button>
-		</div>
-		<div class="results">
-			<p>{{distance}}</p>
-		</div>
+		<img :src="isslogo" id="logo">
+		<form-component></form-component>
 	</div>
 	<footer class="page-footer">
 		<div class="footer-copyright">
