--- a/lib/client/public/index.html
+++ b/lib/client/public/index.html
@@ -10,6 +10,7 @@
 	<div id="app" class="container wrap">
 		<img :src="isslogo" id="logo">
 		<form-component></form-component>
+		<modal-component></modal-component>
 	</div>
 	<footer class="page-footer">
 		<div class="footer-copyright">
@@ -20,7 +21,10 @@
   </footer>
 	<script src="https://unpkg.com/vue/dist/vue.js"></script>
 	<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+	<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
 	<script src="js/components/form-component.js"></script>
+		<script src="js/components/modal-component.js"></script>
 	<script src="js/app.js"></script>
 </body>
 </html>
