Included sidenav component, added styling, created about page

--- a/lib/client/public/about.html
+++ b/lib/client/public/about.html
@@ -11,8 +11,7 @@
 		<nav-component></nav-component>
 		<div class="container wrap">
 			<img :src="isslogo" id="logo">
-			<form-component></form-component>
-			<modal-component></modal-component>
+			<about-component></about-component>
 		</div>
 	</div>
 	<footer class="page-footer">
@@ -29,7 +28,6 @@
 	<script src="js/components/sidenav-component.js"></script>
 	<script src="js/components/form-component.js"></script>
 	<script src="js/components/modal-component.js"></script>
-	<script src="js/components/footer-component.js"></script>
 	<script src="js/app.js"></script>
 </body>
 </html>
