--- a/lib/client/public/about.html
+++ b/lib/client/public/about.html
@@ -12,6 +12,7 @@
 		<div class="container wrap">
 			<img :src="isslogo" id="logo">
 			<about-component></about-component>
+			<modal-component></modal-component>
 		</div>
 	</div>
 	<footer class="page-footer">
@@ -28,6 +29,7 @@
 	<script src="js/components/sidenav-component.js"></script>
 	<script src="js/components/form-component.js"></script>
 	<script src="js/components/modal-component.js"></script>
+	<script src="js/components/about-component.js"></script>
 	<script src="js/app.js"></script>
 </body>
 </html>
